commitao do dia

--- a/_posts/parte II/2023-02-24-Execucao.md
+++ b/_posts/parte II/2023-02-24-Execucao.md
@@ -105,30 +105,10 @@ As restrições do projeto são importantes para limitar o escopo do projeto, es
 
 ### Especificar, projetar, trabalhar, tudo em par
 
-Benefícios Programação em par
 
-Nivelando o conhecimento
+É incentivado o uso de pareamento para a realização das tarefas e uma comunicação clara através das issues. O objetivo do pareamento é nivelar o conhecimento entre os membros da equipe. Embora tenhamos utilizado a técnica do coelho para acelerar o aprendizado na fase inicial, agora é importante compartilhar esse conhecimento e nivelá-lo com outros membros do squad.
 
-
-Pair programming essentially means that two people write code together on one machine. It is a very collaborative way of working and involves a lot of communication. While a pair of developers work on a task together, they do not only write code, they also plan and discuss their work. They clarify ideas on the way, discuss approaches and come to better solutions.
-
-https://martinfowler.com/articles/on-pair-programming.html
-
-### Entregas
-
-Embora o foco principal do curso fosse o desenvolvimento do projeto para avaliar o resultado da aprendizagem, foram estabelecidos alguns outros entregáveis ao longo do período. A lista de entregáveis inclui:
-
-- Documento de especificação de requisitos (Roadmap, StoryMap)
-- Planejamento, demonstração e retrospectiva para cada sprint
-- Revisão por pares para cada sprint
-- Logbook para cada sprint
-- 4 postagens de blog reflexivas baseadas em leituras obrigatórias
-- Documentação do projeto  de acordo com padrões de Software Livre e relatório final (Release notes)
-- Apresentação final
-
-O logbook, ou diário de bordo, é uma ferramenta utilizada para cada aluno registrar as atividades realizadas pelos durante cada sprint, bem como o número de horas dedicadas a cada uma delas. Essa prática permite uma melhor gestão do tempo e das atividades, além de facilitar o monitoramento do progresso individual de cada estudante.
-
-Na última semana, cada equipe é solicitada a apresentar uma demonstração ao vivo da solução para o cliente e realizar uma apresentação final. Além disso, cada equipe escreve um relatório final contendo todas as decisões de projeto, suposições e resultados obtidos.
+O pair programming, ou programação pareada, é uma prática na qual duas pessoas trabalham juntas em um mesmo computador para escrever código. Essa abordagem altamente colaborativa requer muita comunicação e, enquanto os desenvolvedores trabalham em conjunto em uma tarefa, eles não apenas escrevem código, mas também planejam e discutem o trabalho a ser feito. Durante esse processo, ideias são esclarecidas, diferentes abordagens são avaliadas e soluções mais efetivas podem ser alcançadas. Um ótimo artigo sobre programação pareada está [aqui](https://martinfowler.com/articles/on-pair-programming.html).
 
 
 
@@ -186,74 +166,79 @@ Segue um checklist para as equipes.
 
  - Métricas de sucesso:
 
-    -  Os participantes têm seu ambiente de trabalho configurado corretamente (programação em pares com o mentor, se necessário);
-    - Os participantes concluíram os exercícios de git;
-    - Os canais de comunicação (grupo de telegrama, questões) são usados corretamente;
-    - Os interesses, habilidades, motivações e ambições dos participantes são mapeados.
+    -  [ ] Os participantes têm seu ambiente de trabalho configurado corretamente (programação em pares com o mentor, se necessário);
+    - [ ] Os participantes concluíram os exercícios de git;
+    - [ ] Os canais de comunicação (grupo de telegrama, questões) são usados corretamente;
+    - [ ] Os interesses, habilidades, motivações e ambições dos participantes são mapeados.
 
 - Dicas:
 
-    - Empregue a estratégia "Recomendar tarefas repetitivas" - usamos essa estratégia para ajudar irmãos mais novos a dominar as habilidades do git e ganhar confiança antes de passar para tarefas mais complexas. Temos tarefas semanais, pedindo a eles para:
-    - Atualizar o Readme de sua página pessoal do GitHub;
-    - Abrir um pull request em https://github.com/twilio-labs/open-pixel-art;
-    - Abrir/comentar uma no repositório do projeto.
-    - Estabeleça, desde o início do programa, um cronograma de oficinas fixo (dia útil, hora) com uma duração definida. Ser capaz de organizar o tempo com antecedência é crucial para manter os participantes engajados.
-    - Use o máximo possível de ferramentas de código aberto. Isso apresenta os participantes ao ecossistema FOSS e a diferentes comunidades.
-    - Quando as mulheres são mentoradas por outras mulheres, elas relatam sentimentos de inspiração, solidariedade, irmandade e um ambiente amigável. Portanto, deve-se levar em consideração a interseccionalidade de gênero, raça, etnia e deficiências, tanto dos participantes quanto dos mentores, para fazer a correspondência.
-    - Os mentores devem encorajar os participantes a compartilhar suas conquistas com outros participantes. Isso promove uma comunidade acolhedora, com feedback construtivo, colaboração e dificuldades antecipadas que os participantes possam estar enfrentando.
+    - [ ] Empregue a estratégia "Recomendar tarefas repetitivas" - usamos essa estratégia para ajudar irmãos mais novos a dominar as habilidades do git e ganhar confiança antes de passar para tarefas mais complexas. Temos tarefas semanais, pedindo a eles para:
+    - [ ] Atualizar o Readme de sua página pessoal do GitHub;
+    - [ ] Abrir um pull request em https://github.com/twilio-labs/open-pixel-art;
+    - [ ] Abrir/comentar uma no repositório do projeto.
+    - [ ] Estabeleça, desde o início do programa, um cronograma de oficinas fixo (dia útil, hora) com uma duração definida. Ser capaz de organizar o tempo com antecedência é crucial para manter os participantes engajados.
+    - [ ] Use o máximo possível de ferramentas de código aberto. Isso apresenta os participantes ao ecossistema FOSS e a diferentes comunidades.
+    - [ ] Quando as mulheres são mentoradas por outras mulheres, elas relatam sentimentos de inspiração, solidariedade, irmandade e um ambiente amigável. Portanto, deve-se levar em consideração a interseccionalidade de gênero, raça, etnia e deficiências, tanto dos participantes quanto dos mentores, para fazer a correspondência.
+    - [ ] Os mentores devem encorajar os participantes a compartilhar suas conquistas com outros participantes. Isso promove uma comunidade acolhedora, com feedback construtivo, colaboração e dificuldades antecipadas que os participantes possam estar enfrentando.
 
 - Treinamento sugerido:
-    - História do código aberto livre, filosofia, as quatro liberdades essenciais, além do software (cultura);
-    - Fundamentos do git;
-    - Configuração do ambiente local (instalação do Linux, instalação do git, IDE, dependências);
-    - Fluxo de trabalho de contribuição de OSS (da comunicação da questão ao pull request).
-    - Comunicação
-    - Trabalho remoto
 
+    - [ ] História do código aberto livre, filosofia, as quatro liberdades essenciais, além do software (cultura);
+    - [ ] Fundamentos do git;
+    - [ ] Configuração do ambiente local (instalação do Linux, instalação do git, IDE, dependências);
+    - [ ] Fluxo de trabalho de contribuição de OSS (da comunicação da questão ao pull request).
+    - [ ] Comunicação
+    - [ ] Trabalho remoto
 
 
 ## Fase Definir/Prototipar 
 
-A medição da produtividade das equipes de software é uma tarefa complexa e desafiadora. Em primeiro lugar, a própria noção de produtividade pode ser subjetiva e variar de pessoa para pessoa. Mesmo quando se estabelecem parâmetros de referência e métricas, a percepção da produtividade por um engenheiro de software pode ser diferente daquela de um executivo ou membro do conselho. 
+O objetivo desta etapa é fornecer autonomia para as equipes desenvolverem o projeto, enquanto recebem feedback contínuo. Durante as sessões teóricas, serão apresentados os conceitos teóricos e estudos de caso para que os participantes possam relacioná-los com as práticas executadas.
 
-No desenvolvimento de software, a produtividade não se resume apenas ao volume de código escrito ou à ausência de erros. Existem muitos outros fatores que podem influenciar a produtividade da equipe, como a qualidade do código, a eficiência do processo de desenvolvimento, a colaboração entre membros da equipe, o uso de ferramentas e tecnologias apropriadas, entre outros.
+Nesta etapa, as equipes começam a criar os primeiros artefatos do projeto e a tomar as principais decisões, como a escolha da tecnologia, ferramentas, escopo e arquitetura. Os mentores e professores auxiliam na gestão de riscos, intervindo somente em propostas inviáveis. É crucial respeitar a autonomia das equipes e suas decisões, mesmo que estas contrariem as orientações dadas. As equipes não devem ser punidas por decisões equivocadas, pois o mais importante é compreender os conceitos e desenvolver um senso crítico para entender as razões dos erros.
 
-Portanto, para medir adequadamente a produtividade de uma equipe de software, é essencial ter uma compreensão abrangente e holística do processo de desenvolvimento, bem como das necessidades e objetivos da empresa. Além disso, é importante ter uma abordagem flexível e adaptável, que possa se ajustar às mudanças nas prioridades e demandas do projeto. Somente assim será possível obter uma visão precisa e útil da produtividade da equipe.
-
-É verdade que métricas como *Deployment Frequency*, *Cycle Time*, *Pull Request Throughput*, *Code Activity* e *Lead Time* podem ser úteis para medir a produtividade das equipes de software. No entanto, é importante lembrar que essas métricas não são a única forma de medir a produtividade e podem não ser suficientes por si só.
-
-Existem muitos outros fatores que podem afetar a produtividade da equipe de software, como a qualidade do código, a eficiência da comunicação e colaboração entre os membros da equipe, a utilização de boas práticas de desenvolvimento de software, a adoção de tecnologias e ferramentas modernas, entre outros.
+O foco dessa etapa é medir e otimizar a produtividade dos squads. Algumas métricas de produtividade de equipe são o burndown, velocity, quantidade de issues fechadas por membro. Existem muitos outros fatores que podem afetar a produtividade da equipe de software, como a qualidade do código, a eficiência da comunicação e colaboração entre os membros da equipe, a utilização de boas práticas de desenvolvimento de software, a adoção de tecnologias e ferramentas modernas, entre outros.
 
 Compreender o trabalho invisível e o impacto que ele tem na produtividade da equipe é crucial para o sucesso de um projeto de software. Quando esse trabalho é ignorado ou subestimado, pode haver uma lacuna significativa entre as expectativas das partes interessadas e a realidade do trabalho da equipe de desenvolvimento.
 
 Isso pode levar a problemas de comunicação e compreensão, resultando em frustração, mal-entendidos e atrasos no projeto. Além disso, a falta de reconhecimento e valorização do trabalho invisível pode levar à rotatividade de colaboradores, pois a equipe pode sentir-se desmotivada e subestimada.
 
-Cabe à liderança da empresa reconhecer e valorizar o trabalho invisível realizado pela equipe de software, comunicar de forma clara e transparente com as partes interessadas do negócio e garantir que haja um entendimento mútuo das expectativas e dos objetivos do projeto. Isso pode ser alcançado através de uma comunicação frequente e efetiva entre a equipe de desenvolvimento de software e as partes interessadas, bem como pelo estabelecimento de um ambiente de trabalho colaborativo e inclusivo.
+Cabe à liderança da equipe e dos facilitadores reconhecer e valorizar o trabalho invisível realizado pela equipe de software, comunicar de forma clara e transparente com as partes interessadas do negócio e garantir que haja um entendimento mútuo das expectativas e dos objetivos do projeto. Isso pode ser alcançado através de uma comunicação frequente e efetiva entre a equipe de desenvolvimento de software e as partes interessadas, bem como pelo estabelecimento de um ambiente de trabalho colaborativo e inclusivo.
 
-Ao reconhecer e valorizar o trabalho invisível e promover uma cultura de comunicação aberta e transparente, a liderança pode ajudar a minimizar a lacuna entre as expectativas das partes interessadas e a realidade do trabalho da equipe de software, promovendo um ambiente de trabalho mais saudável e produtivo e impulsionando o crescimento do negócio.
-
-
-A maturidade no desenvolvimento de software é um conceito que se refere à capacidade da equipe de software de entregar um produto de alta qualidade, confiável e seguro de maneira consistente e previsível. Isso implica ter processos de desenvolvimento de software bem definidos, testes automatizados e uma cultura de qualidade e melhoria contínua.
-
-Por outro lado, a produtividade no desenvolvimento de software se concentra no ritmo e eficiência do trabalho da equipe, medindo a capacidade de produzir resultados de maneira rápida e eficaz. Isso inclui métricas como a quantidade de trabalho concluído em um determinado período de tempo, a rapidez com que as alterações de código são implementadas e a frequência com que o software é distribuído para o usuário final.
-
-Equipes de alto desempenho em desenvolvimento de software devem reconhecer a importância de investir tempo em apoiar outras atividades que são vitais para o sucesso do projeto, mesmo que não envolvam diretamente alterações de código ou mudanças visíveis aos usuários. Essas atividades podem incluir a melhoria contínua dos processos de desenvolvimento, 
+Ao reconhecer e valorizar o trabalho invisível e promover uma cultura de comunicação aberta e transparente, a liderança pode ajudar a minimizar a lacuna entre as expectativas das partes interessadas e a realidade do trabalho da equipe de software, promovendo um ambiente de trabalho mais saudável e produtivo e impulsionando o crescimento.
 
 Alguns exemplos podem incluir:
 
-- Acompanhamento e avaliação de métricas de qualidade e desempenho do software;
-- Análise de dados e feedback dos usuários para orientar a tomada de decisões de desenvolvimento;
-- Realização de testes de integração e testes automatizados;
-- Gerenciamento de configuração de software e controle de versão;
-- Participação em treinamentos e desenvolvimento profissional;
-- Colaboração com outras equipes ou departamentos da empresa, como equipes de operações, marketing e vendas, para garantir a integração efetiva do software no ambiente de negócios.
-
+- [ ] Acompanhamento e avaliação de métricas de qualidade e desempenho do software;
+- [ ] Análise de dados e feedback dos usuários para orientar a tomada de decisões de desenvolvimento;
+- [ ] Realização de testes de integração e testes automatizados;
+- [ ] Gerenciamento de configuração de software e controle de versão;
+- [ ] Participação em treinamentos e desenvolvimento profissional;
+- [ ] Colaboração com outras equipes ou departamentos da empresa, como equipes de operações, marketing e vendas, para garantir a integração efetiva do software no ambiente de negócios.
 
 
 ### Definindo o significado de Pronto
 
+### Entregas
+
+Embora o objetivo principal do curso seja desenvolver um projeto para avaliar o aprendizado, também foram definidos outros entregáveis durante o período. A lista de entregáveis inclui:
+
+- Documento de especificação de requisitos (Roadmap, StoryMap)
+- Planejamento, demonstração e retrospectiva para cada sprint
+- Revisão por pares para cada sprint
+- Logbook para cada sprint
+- Documentação do projeto  de acordo com padrões de Software Livre e relatório final (Release notes)
+- Apresentação Release 1
+
+O logbook, ou diário de bordo, é uma ferramenta utilizada para cada aluno registrar as atividades realizadas pelos durante cada sprint, bem como o número de horas dedicadas a cada uma delas. Essa prática permite uma melhor gestão do tempo e das atividades, além de facilitar o monitoramento do progresso individual de cada estudante.
+
+Na última semana, cada equipe é solicitada a apresentar uma demonstração ao vivo da solução para o cliente e realizar uma apresentação final. Além disso, cada equipe escreve um relatório final contendo todas as decisões de projeto, suposições e resultados obtidos.
+
+
 ### Checklist
-Nesta fase do projeto, espera-se que as práticas ágeis estejam sendo executadas de forma mais madura. Para ajudar a garantir a produtividade da equipe, segue um checklist com algumas práticas ágeis a serem consideradas:
+
+Nesta fase do projeto, espera-se que as práticas ágeis estejam sendo executadas de forma mais madura e a equipe tenha uma métrica estável de produtividade da equipe. Para ajudar a garantir a produtividade da equipe, segue um checklist com algumas práticas ágeis a serem consideradas:
 
 - [ ] Os rituais de planejamento, review, retrospectiva estão acontecendo sempre no mesmo dia/horário?
 - [ ] Os rituais são time-box (começam sem atraso e terminam no horário limite estipulado)?
@@ -269,26 +254,41 @@ Segue um checklist de alguns artefatos desenvolvidos nessa etapa do projeto:
 - [ ] Checklist dos padrões de comunidade de OSS devem ter sido cumpridos [https://opensource.guide](https://opensource.guide)
 
 - Métricas de Sucesso:
-    - O participante consegue subir o ambiente do projeto em um ambiente local;
-    - O participante consegue modificar o projeto;
-    - O participante participa ativamente das discussões das sessões teóricas;
-    - Os participantes trabalham em pares para resolver problemas propostos;
-    - O participante se sente confortável compartilhando com o mentor/coach suas dificuldades;
-    - O participante se sente confortável compartilhando suas realizações nas sessões teóricas;
-    - O participante compreende a importância da documentação técnica no ecossistema de código aberto;
-    - O participante estabelece objetivos claros e expectativas sobre o programa e percebe suas melhorias.
+
+    - [ ] O participante consegue subir o ambiente do projeto em um ambiente local;
+    - [ ] O participante consegue modificar o projeto;
+    - [ ] O participante participa ativamente das discussões das sessões teóricas;
+    - [ ] Os participantes trabalham em pares para resolver problemas propostos;
+    - [ ] O participante se sente confortável compartilhando com o mentor/coach suas dificuldades;
+    - [ ] O participante se sente confortável compartilhando suas realizações nas sessões teóricas;
+    - [ ] O participante compreende a importância da documentação técnica no ecossistema de código aberto;
+    - [ ] O participante estabelece objetivos claros e expectativas sobre o programa e percebe suas melhorias.
 
 - Dicas:
-    - Utilize a programação em pares entre os participantes e superpareamento com mentores técnicos, se necessário;
-    - Divida as tarefas em pedaços menores - tarefas desafiadoras podem criar medos sociais nos novatos;
-    - Como os participantes podem ter diferentes habilidades técnicas, o mentor/coach deve monitorar o progresso dos participantes e garantir que eles se sintam desafiados e motivados;
-    - Os mentores devem se comunicar com a organização sobre as dificuldades enfrentadas pelos participantes para que possamo professor possa ajustar as tarefas/entregas para atender às expectativas dos participantes;
-    - A organização deve analisar semanalmente a pesquisa de mentores e participantes para identificar melhorias e usar os dados para refinar o planejamento das sessões teóricas.
+    - [ ] Utilize a programação em pares entre os participantes e superpareamento com mentores técnicos, se necessário;
+    - [ ] Divida as tarefas em pedaços menores - tarefas desafiadoras podem criar medos sociais nos novatos;
+    - [ ] Como os participantes podem ter diferentes habilidades técnicas, o mentor/coach deve monitorar o progresso dos participantes e garantir que eles se sintam desafiados e motivados;
+    - [ ] Os mentores devem se comunicar com a organização sobre as dificuldades enfrentadas pelos participantes para que possamo professor possa ajustar as tarefas/entregas para atender às expectativas dos participantes;
 
 
 ## Fase Desenvolver/Testar
 
+A terceira fase consiste em consolidar os conceitos aprendidos, manter a produtividade da equipe e focar na qualidade de código.
 
+
+A medição da produtividade das equipes de software é uma tarefa complexa e desafiadora. Em primeiro lugar, a própria noção de produtividade pode ser subjetiva e variar de pessoa para pessoa. Mesmo quando se estabelecem parâmetros de referência e métricas, a percepção da produtividade por um engenheiro de software pode ser diferente daquela de um executivo ou membro do conselho. 
+
+No desenvolvimento de software, a produtividade não se resume apenas ao volume de código escrito ou à ausência de erros. Existem muitos outros fatores que podem influenciar a produtividade da equipe, como a qualidade do código, a eficiência do processo de desenvolvimento, a colaboração entre membros da equipe, o uso de ferramentas e tecnologias apropriadas, entre outros.
+
+Portanto, para medir adequadamente a produtividade de uma equipe de software, é essencial ter uma compreensão abrangente e holística do processo de desenvolvimento, bem como das necessidades e objetivos da empresa. Além disso, é importante ter uma abordagem flexível e adaptável, que possa se ajustar às mudanças nas prioridades e demandas do projeto. Somente assim será possível obter uma visão precisa e útil da produtividade da equipe.
+
+É verdade que métricas como *Deployment Frequency*, *Cycle Time*, *Pull Request Throughput*, *Code Activity* e *Lead Time* podem ser úteis para medir a produtividade das equipes de software. No entanto, é importante lembrar que essas métricas não são a única forma de medir a produtividade e podem não ser suficientes por si só.
+
+A maturidade no desenvolvimento de software é um conceito que se refere à capacidade da equipe de software de entregar um produto de alta qualidade, confiável e seguro de maneira consistente e previsível. Isso implica ter processos de desenvolvimento de software bem definidos, testes automatizados e uma cultura de qualidade e melhoria contínua.
+
+Por outro lado, a produtividade no desenvolvimento de software se concentra no ritmo e eficiência do trabalho da equipe, medindo a capacidade de produzir resultados de maneira rápida e eficaz. Isso inclui métricas como a quantidade de trabalho concluído em um determinado período de tempo, a rapidez com que as alterações de código são implementadas e a frequência com que o software é distribuído para o usuário final.
+
+Equipes de alto desempenho em desenvolvimento de software devem reconhecer a importância de investir tempo em apoiar outras atividades que são vitais para o sucesso do projeto, mesmo que não envolvam diretamente alterações de código ou mudanças visíveis aos usuários. Essas atividades podem incluir a melhoria contínua dos processos de desenvolvimento, 
 
 ## Sessões Teóricas
 
@@ -297,14 +297,10 @@ Durante o curso, os alunos participaram de aulas teóricas, palestras e painéis
 Além disso, os alunos são desafiados a escrever reflexões em postagens de blog, conectando os tópicos com suas experiências e projetos. Por exemplo, eles poderiam escrever sobre como a coordenação e a comunicação foram importantes para o sucesso do projeto de programação de cursos. Essas atividades ajudaram os alunos a refletir sobre suas habilidades e conhecimentos e a aplicá-los no contexto do projeto.
 
 
-
-
-
 ### Checklist
 
 Segue um checklist para ajudar na organização do evento de recepção:
 
-- [ ]
 
 Segue um checklist para ajudar na organização da primeira etapa do onboarding para o professor/mentor. 
 
@@ -312,16 +308,16 @@ Segue um checklist para ajudar na organização da primeira etapa do onboarding 
 Segue um checklist para ajudar na organização da primeira etapa do onboarding para os instrutores.
 
 - Métricas de Sucesso:
-    - O participante contribui para o projeto;
-    - Os participantes se sentem confiantes em suas habilidades para contribuir para outras comunidades de software livre;
-    - Os participantes se sentem motivados a contribuir para projetos de software livre;
-    - O participante entende os benefícios de contribuir para o projeto de software livre (autoaperfeiçoamento, construção de portfólio, mentoria, projetos interessantes).
+    - [ ] O participante contribui para o projeto;
+    - [ ] Os participantes se sentem confiantes em suas habilidades para contribuir para outras comunidades de software livre;
+    - [ ] Os participantes se sentem motivados a contribuir para projetos de software livre;
+    - [ ] O participante entende os benefícios de contribuir para o projeto de software livre (autoaperfeiçoamento, construção de portfólio, mentoria, projetos interessantes).
 
 - Dicas:
-    - Aconselhe os participantes a escolherem issues que estejam de acordo com suas habilidades e objetivos de carreira;
-    - Apresente o fluxo de trabalho de contribuição da comunidade de software livre;
-    - Certifique-se de que todos os participantes tenham o ambiente local funcionando corretamente (caso contrário, faça pair programming com eles para resolver os problemas ou tenha uma codificação ao vivo específica para configurar o ambiente);
-    - Dê feedback constante aos participantes durante o workshop e especialmente em questões / pull requests;
-    - Mapeie questões para diferentes conjuntos de habilidades (documentação, comunicação, implementação, correção de bugs);
-    - Verifique com mais frequência para ver se o participante está bloqueado;
-    - Configure sessões em pares para os participantes trabalharem em contribuições;
+    - [ ] Aconselhe os participantes a escolherem issues que estejam de acordo com suas habilidades e objetivos de carreira;
+    - [ ] Apresente o fluxo de trabalho de contribuição da comunidade de software livre;
+    - [ ] Certifique-se de que todos os participantes tenham o ambiente local funcionando corretamente (caso contrário, faça pair programming com eles para resolver os problemas ou tenha uma codificação ao vivo específica para configurar o ambiente);
+    - [ ] Dê feedback constante aos participantes durante o workshop e especialmente em questões / pull requests;
+    - [ ] Mapeie questões para diferentes conjuntos de habilidades (documentação, comunicação, implementação, correção de bugs);
+    - [ ] Verifique com mais frequência para ver se o participante está bloqueado;
+    - [ ] Configure sessões em pares para os participantes trabalharem em contribuições;
