commitao do dia

--- a/_posts/parte II/2023-02-24-Execucao.md
+++ b/_posts/parte II/2023-02-24-Execucao.md
@@ -296,6 +296,10 @@ Durante o curso, os alunos participaram de aulas teóricas, palestras e painéis
 
 Além disso, os alunos são desafiados a escrever reflexões em postagens de blog, conectando os tópicos com suas experiências e projetos. Por exemplo, eles poderiam escrever sobre como a coordenação e a comunicação foram importantes para o sucesso do projeto de programação de cursos. Essas atividades ajudaram os alunos a refletir sobre suas habilidades e conhecimentos e a aplicá-los no contexto do projeto.
 
+### Entregas
+
+Embora o objetivo principal do curso seja desenvolver um projeto para avaliar o aprendizado, também foram definidos outros entregáveis durante o período. A lista de entregáveis inclui:
+
 
 ### Checklist
 
@@ -321,3 +325,38 @@ Segue um checklist para ajudar na organização da primeira etapa do onboarding 
     - [ ] Mapeie questões para diferentes conjuntos de habilidades (documentação, comunicação, implementação, correção de bugs);
     - [ ] Verifique com mais frequência para ver se o participante está bloqueado;
     - [ ] Configure sessões em pares para os participantes trabalharem em contribuições;
+
+
+
+## Releases/Fechamento
+
+ O release de software é o processo de lançamento de uma nova versão de um software para o público. É uma etapa importante do ciclo de vida do desenvolvimento de software, que permite que os usuários experimentem e aproveitem as novas funcionalidades e correções de bugs. Os releases podem ser classificados em várias categorias, como major releases (que incluem grandes mudanças e novas funcionalidades), minor releases (que incluem pequenas correções e melhorias), ou patches (que corrigem bugs críticos). O processo de release é geralmente gerenciado pelo time de desenvolvimento de software e inclui testes extensivos antes de ser lançado para o público. Para os alunos universitários, é importante compreender o conceito de release de software para entender como os softwares são desenvolvidos e lançados, e para ter uma ideia do que esperar quando usam um software.
+
+Os artefatos esperados em uma release de software incluem:
+
+- Código-fonte: a última versão do código-fonte, já testado e aprovado para lançamento.
+- Documentação técnica: especificações técnicas, diagramas e outros documentos técnicos que descrevem como o software funciona.
+- Testes: relatórios de testes que mostram que o software passou em todos os testes e está pronto para o lançamento.
+- Pacotes de instalação: arquivos necessários para instalar o software em diferentes plataformas.
+- Notas de Release: descrição detalhada das novas funcionalidades, correções de bugs e outros aprimoramentos incluídos na nova versão.
+- Estes artefatos são importantes para garantir que a nova versão do software seja facilmente compreendida e utilizada pelos usuários, e para documentar as mudanças feitas no software durante o processo de desenvolvimento.
+
+### Release 1/Release 2
+
+O objetivo principal das apresentações da R1/R2 é evidenciar o aprendizado da equipe, tanto individual quanto coletivamente, demonstrando que eles foram capazes de compreender os conceitos apresentados em sala de aula e aplicá-los no projeto desenvolvido.
+
+É importante lembrar que os avaliadores já leram todo o conteúdo disponível no repositório do projeto e que parte do público presente não irá avaliar o projeto, mas estará interessado no produto de software proposto. Portanto, é crucial que a apresentação se concentre nos elementos da proposta que não estão disponíveis no Github.
+
+Para isso, é fundamental responder às seguintes perguntas:
+
+- Qual é a proposta do produto de software?
+- Como funciona a aplicação proposta? Quais são as principais funcionalidades?
+- Quais foram as lições aprendidas durante o projeto? Isso inclui tanto aspectos positivos quanto negativos.
+- Qual foi o impacto das práticas ágeis na forma como o projeto foi desenvolvido? Seja específico, mencionando como a retrospectiva ajudou na gestão de riscos e aumento da produtividade, por exemplo.
+- Como a equipe interpreta as métricas do projeto, como burndown, velocity e issues abertas/fechadas?
+- Qual é a complexidade técnica da solução proposta?
+- Certifique-se de que a apresentação seja clara e objetiva, destacando as informações mais relevantes para o público presente. Use exemplos e ilustrações sempre que possível para tornar a apresentação mais interessante e fácil de entender. Boa sorte!
+
+### Dicas
+
+- Como fazer boas apresentações Dicas de slides - [https://www.ime.usp.br/~kon/ResearchStudents/dicasSlides.html](https://www.ime.usp.br/~kon/ResearchStudents/dicasSlides.html)
