commitao do dia

--- a/_posts/parte II/2023-02-24-Execucao.md
+++ b/_posts/parte II/2023-02-24-Execucao.md
@@ -224,12 +224,13 @@ Alguns exemplos podem incluir:
 
 Embora o objetivo principal do curso seja desenvolver um projeto para avaliar o aprendizado, também foram definidos outros entregáveis durante o período. A lista de entregáveis inclui:
 
-- Documento de especificação de requisitos (Roadmap, StoryMap)
-- Planejamento, demonstração e retrospectiva para cada sprint
-- Revisão por pares para cada sprint
-- Logbook para cada sprint
-- Documentação do projeto  de acordo com padrões de Software Livre e relatório final (Release notes)
-- Apresentação Release 1
+- [ ] Documento de especificação de requisitos (Roadmap, StoryMap)
+- [ ] Planejamento, demonstração e retrospectiva para cada sprint
+- [ ] Revisão por pares para cada sprint
+- [ ] Logbook para cada sprint
+- [ ] Documentação do projeto  de acordo com padrões de Software Livre e relatório final (Release notes)
+- [ ] Apresentação Release 1
+- [ ] Código fonte evidenciando a viabilidade da arquitetura
 
 O logbook, ou diário de bordo, é uma ferramenta utilizada para cada aluno registrar as atividades realizadas pelos durante cada sprint, bem como o número de horas dedicadas a cada uma delas. Essa prática permite uma melhor gestão do tempo e das atividades, além de facilitar o monitoramento do progresso individual de cada estudante.
 
